--- a/ParserCombinator/ParserCombinator.fsproj
+++ b/ParserCombinator/ParserCombinator.fsproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="InputState.fs" />
+    <Compile Include="Parser.fs" />
+    <Compile Include="ParserCombinator.fs" />
+    <Compile Include="ParserUtilities.fs" />
+    <Compile Include="JsonParser.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
