--- a/SyntaxAnalyzer/SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/SyntaxAnalyzer.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="QuikGraph" Version="2.5.0" />
+      <PackageReference Include="QuikGraph.Graphviz" Version="2.5.0" />
+    </ItemGroup>
+
 </Project>
