--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -9,12 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DanielStout.AsciiTableFormatter" Version="1.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
+        <PackageReference Include="TextTableFormatter.NET" Version="2.0.1" />
     </ItemGroup>
 
     <ItemGroup>
